--- a/compiler/src/test.ipynb
+++ b/compiler/src/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,24 @@
    ],
    "source": [
     "print(stack_Operators[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "stack_Operators.clear()\n",
+    "print(stack_Operators)"
    ]
   },
   {
@@ -128,10 +146,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.12199579e-314 1.06524189e-311 1.97626258e-321 3.79442416e-321]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr  = np.empty(4, dtype=float)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiene elemento\n"
+     ]
+    }
+   ],
+   "source": [
+    "if arr[2]:\n",
+    "    print('Tiene elemento')\n",
+    "else:\n",
+    "    print('No tiene elemento')"
+   ]
   }
  ],
  "metadata": {
